# yadro-test-rfc

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb  interpolation_results.csv  requirements.txt
data/: 0.0hz_from_-1.0_to_1.0_lin_fixed.csv  0.0hz_from_-1.0_to_1.0_signal.csv  0.0hz_from_-1.0_to_1.0_sinc.csv  1.0hz_from_0.0_to_1.0_lin_fixed.csv  1.0hz_from_0.0_to_1.0_ref_200.csv  1.0hz_from_0.0_to_1.0_ref_quantized_200.csv  1.0hz_from_0.0_to_1.0_signal.csv  1.0hz_from_0.0_to_1.0_sinc.csv  10.0hz_from_0.0_to_1.0_lin_fixed.csv  10.0hz_from_0.0_to_1.0_ref_200.csv  10.0hz_from_0.0_to_1.0_ref_quantized_200.csv  10.0hz_from_0.0_to_1.0_signal.csv  10.0hz_from_0.0_to_1.0_sinc.csv  18.0hz_from_0.0_to_2.0_lin_fixed.csv  18.0hz_from_0.0_to_2.0_ref_200.csv  18.0hz_from_0.0_to_2.0_ref_quantized_200.csv  18.0hz_from_0.0_to_2.0_signal.csv  18.0hz_from_0.0_to_2.0_sinc.csv  2.0hz_from_0.0_to_2.0_lin_fixed.csv  2.0hz_from_0.0_to_2.0_ref_200.csv  2.0hz_from_0.0_to_2.0_ref_quantized_200.csv  2.0hz_from_0.0_to_2.0_signal.csv  2.0hz_from_0.0_to_2.0_sinc.csv  20.0hz_from_-1.0_to_1.0_lin_fixed.csv  20.0hz_from_-1.0_to_1.0_ref_200.csv  20.0hz_from_-1.0_to_1.0_ref_quantized_200.csv  20.0hz_from_-1.0_to_1.0_signal.csv  20.0hz_from_-1.0_to_1.0_sinc.csv  20.0hz_from_0.0_to_1.0_lin_fixed.csv  20.0hz_from_0.0_to_1.0_ref_200.csv  20.0hz_from_0.0_to_1.0_ref_quantized_200.csv  20.0hz_from_0.0_to_1.0_signal.csv  20.0hz_from_0.0_to_1.0_sinc.csv  30.0hz_from_-1.0_to_1.0_lin_fixed.csv  30.0hz_from_-1.0_to_1.0_ref_200.csv  30.0hz_from_-1.0_to_1.0_ref_quantized_200.csv  30.0hz_from_-1.0_to_1.0_signal.csv  (+46 more)
(+11 files in other folders)
